--- a/vv360_mobile/package.json
+++ b/vv360_mobile/package.json
@@ -16,9 +16,11 @@
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-bluetooth-escpos-printer": "^0.0.5",
+    "react-native-fs": "^2.20.0",
     "react-native-permissions": "^5.4.1",
     "react-native-reanimated": "^3.18.0",
-    "react-native-screens": "^4.11.1"
+    "react-native-screens": "^4.11.1",
+    "react-native-sqlite-storage": "^6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
