--- a/vv360_mobile/package.json
+++ b/vv360_mobile/package.json
@@ -20,7 +20,8 @@
     "react-native-permissions": "^5.4.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-screens": "^4.11.1",
-    "react-native-sqlite-storage": "^6.0.1"
+    "react-native-sqlite-storage": "^6.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
