--- a/vv360_mobile/android/app/build.gradle
+++ b/vv360_mobile/android/app/build.gradle
@@ -105,6 +105,13 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
+
+applicationVariants.all { variant ->
+        variant.outputs.all { output ->
+            def newApkName = "Visteon_verify360-${variant.versionName}.apk"
+            outputFileName = newApkName
+        }
+    }
 }
 
 dependencies {
